--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body
+    font-family: 'Poppins', 'Segoe UI'
+
+.full-body
+    height: calc(100vh - 56px)
