--- a/src/app/navbar/navbar.component.sass
+++ b/src/app/navbar/navbar.component.sass
@@ -6,12 +6,13 @@
 
 .nav-link
     font-weight: 600
-    border-radius: 10px
+    // border-radius: 10px
+    text-decoration: none
     &:hover
-        text-decoration: line-through
+        border-bottom: 2px solid white
 
     &.active
-        text-decoration: underline
+        border-top: 2px solid white
         width: max-content
         &:hover
-            text-decoration: line-through
+            border-bottom: 2px solid white
