--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,126 @@
-<div id="header" class="container-fluid full-body bg-dark">
-    <div class="container h-100">
-        <div class="row h-100">
+<!-- Header -->
+<section id="header" class="d-flex container-fluid d-flex full-body bg-dark">
+    <div class="container d-flex">
+        <div class="row">
             <div class="col-12 col-md-6 h-md-auto"></div>
             <div class="col-12 col-md-6 align-self-center">
                 <div class="card mt-auto">
                     <div class="card-body p-4">
                         <h1 class="card-title mb-5">Hi, i am Kavin Arulnambi, a Freelance Artist from Chennai , India</h1>
                         <h2 class="card-subtitle">Nice to meet you too!</h2>
-                        <h4 class="card-text mt-4">I’m doing my bachelors degree in Visual Communications in Chennai, i have a background in Photography, Aesthetics, Music, 3D, Video and Photo Manipulation</h4>
+                        <p class="fs-4 card-text mt-4">I’m doing my bachelors degree in Visual Communications in Chennai, i have a background in Photography, Aesthetics, Music, 3D, Video and Photo Manipulation</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
+<!-- Works -->
+<section id="mywork" class="d-flex container-fluid full-body bg-dark pt-5">
+    <h1 class="text-center t-title">My Work</h1>
+    <div class="d-flex justify-content-center container p-4">
+        <div class="row">
+            <div class="d-flex col-12 col-md-6 p-4">
+                <div class="work-card">
+                    <img src="assets/countach1-01.jpg" class="img-fluid ratio ratio-1x1" alt="3D Renders">
+                    <a href="" class="fs-2 work-card-text text-center">3D Renders</a>
+                </div>
+            </div>
+            <div class="d-flex p-4 col-12 col-md-6">
+                <div class="work-card">
+                    <img src="assets/countach1-03.jpg" class="img-fluid ratio ratio-1x1" alt="Graphic Design">
+                    <a href="" class="fs-2 work-card-text text-center">Graphic Design</a>
+                </div>
+            </div>
+            <div class="d-flex p-4 col-12 col-md-6">
+                <div class="work-card">
+                    <img src="assets/countach1-02.jpg" class="img-fluid ratio ratio-1x1" alt="Sketches">
+                    <a href="" class="fs-2 work-card-text text-center">Sketches</a>
+                </div>
+            </div>
+            <div class="d-flex p-4 col-12 col-md-6">
+                <div class="work-card">
+                    <img src="assets/countach1-04.jpg" class="img-fluid ratio ratio-1x1" alt="Photographs">
+                    <a href="" class="fs-2 work-card-text text-center">Photographs</a>
+                </div>
+            </div>
+            <hr>
+            <div class="row justify-content-center">
+                <div class="d-flex flex-column justify-content-center col-12 col-md-6 p-2 text-center">
+                    <div class="img-thumbnail">
+                        <div class="ratio ratio-16x9">
+                            <iframe src="https://www.youtube-nocookie.com/embed/vVVI6LHbytk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <h2 class="mt-4">Youtube</h2>
+                </div>
+                <div class="d-flex flex-column align-items-center col-12 col-md-6 p-2 text-center">
+                    <div>
+                        <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/CIbJDXNgq6K/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="13" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"><div style="padding:16px;"> <a href="https://www.instagram.com/p/CIbJDXNgq6K/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank"> <div style=" display: flex; flex-direction: row; align-items: center;"> <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div> <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;"> <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div> <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div></div></div><div style="padding: 19% 0;"></div> <div style="display:block; height:50px; margin:0 auto 12px; width:50px;"><svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g transform="translate(-511.000000, -20.000000)" fill="#000000"><g><path d="M556.869,30.41 C554.814,30.41 553.148,32.076 553.148,34.131 C553.148,36.186 554.814,37.852 556.869,37.852 C558.924,37.852 560.59,36.186 560.59,34.131 C560.59,32.076 558.924,30.41 556.869,30.41 M541,60.657 C535.114,60.657 530.342,55.887 530.342,50 C530.342,44.114 535.114,39.342 541,39.342 C546.887,39.342 551.658,44.114 551.658,50 C551.658,55.887 546.887,60.657 541,60.657 M541,33.886 C532.1,33.886 524.886,41.1 524.886,50 C524.886,58.899 532.1,66.113 541,66.113 C549.9,66.113 557.115,58.899 557.115,50 C557.115,41.1 549.9,33.886 541,33.886 M565.378,62.101 C565.244,65.022 564.756,66.606 564.346,67.663 C563.803,69.06 563.154,70.057 562.106,71.106 C561.058,72.155 560.06,72.803 558.662,73.347 C557.607,73.757 556.021,74.244 553.102,74.378 C549.944,74.521 548.997,74.552 541,74.552 C533.003,74.552 532.056,74.521 528.898,74.378 C525.979,74.244 524.393,73.757 523.338,73.347 C521.94,72.803 520.942,72.155 519.894,71.106 C518.846,70.057 518.197,69.06 517.654,67.663 C517.244,66.606 516.755,65.022 516.623,62.101 C516.479,58.943 516.448,57.996 516.448,50 C516.448,42.003 516.479,41.056 516.623,37.899 C516.755,34.978 517.244,33.391 517.654,32.338 C518.197,30.938 518.846,29.942 519.894,28.894 C520.942,27.846 521.94,27.196 523.338,26.654 C524.393,26.244 525.979,25.756 528.898,25.623 C532.057,25.479 533.004,25.448 541,25.448 C548.997,25.448 549.943,25.479 553.102,25.623 C556.021,25.756 557.607,26.244 558.662,26.654 C560.06,27.196 561.058,27.846 562.106,28.894 C563.154,29.942 563.803,30.938 564.346,32.338 C564.756,33.391 565.244,34.978 565.378,37.899 C565.522,41.056 565.552,42.003 565.552,50 C565.552,57.996 565.522,58.943 565.378,62.101 M570.82,37.631 C570.674,34.438 570.167,32.258 569.425,30.349 C568.659,28.377 567.633,26.702 565.965,25.035 C564.297,23.368 562.623,22.342 560.652,21.575 C558.743,20.834 556.562,20.326 553.369,20.18 C550.169,20.033 549.148,20 541,20 C532.853,20 531.831,20.033 528.631,20.18 C525.438,20.326 523.257,20.834 521.349,21.575 C519.376,22.342 517.703,23.368 516.035,25.035 C514.368,26.702 513.342,28.377 512.574,30.349 C511.834,32.258 511.326,34.438 511.181,37.631 C511.035,40.831 511,41.851 511,50 C511,58.147 511.035,59.17 511.181,62.369 C511.326,65.562 511.834,67.743 512.574,69.651 C513.342,71.625 514.368,73.296 516.035,74.965 C517.703,76.634 519.376,77.658 521.349,78.425 C523.257,79.167 525.438,79.673 528.631,79.82 C531.831,79.965 532.853,80.001 541,80.001 C549.148,80.001 550.169,79.965 553.369,79.82 C556.562,79.673 558.743,79.167 560.652,78.425 C562.623,77.658 564.297,76.634 565.965,74.965 C567.633,73.296 568.659,71.625 569.425,69.651 C570.167,67.743 570.674,65.562 570.82,62.369 C570.966,59.17 571,58.147 571,50 C571,41.851 570.966,40.831 570.82,37.631"></path></g></g></g></svg></div><div style="padding-top: 8px;"> <div style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"> View this post on Instagram</div></div><div style="padding: 12.5% 0;"></div> <div style="display: flex; flex-direction: row; margin-bottom: 14px; align-items: center;"><div> <div style="background-color: #F4F4F4; border-radius: 50%; height: 12.5px; width: 12.5px; transform: translateX(0px) translateY(7px);"></div> <div style="background-color: #F4F4F4; height: 12.5px; transform: rotate(-45deg) translateX(3px) translateY(1px); width: 12.5px; flex-grow: 0; margin-right: 14px; margin-left: 2px;"></div> <div style="background-color: #F4F4F4; border-radius: 50%; height: 12.5px; width: 12.5px; transform: translateX(9px) translateY(-18px);"></div></div><div style="margin-left: 8px;"> <div style=" background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 20px; width: 20px;"></div> <div style=" width: 0; height: 0; border-top: 2px solid transparent; border-left: 6px solid #f4f4f4; border-bottom: 2px solid transparent; transform: translateX(16px) translateY(-4px) rotate(30deg)"></div></div><div style="margin-left: auto;"> <div style=" width: 0px; border-top: 8px solid #F4F4F4; border-right: 8px solid transparent; transform: translateY(16px);"></div> <div style=" background-color: #F4F4F4; flex-grow: 0; height: 12px; width: 16px; transform: translateY(-4px);"></div> <div style=" width: 0; height: 0; border-top: 8px solid #F4F4F4; border-left: 8px solid transparent; transform: translateY(-4px) translateX(8px);"></div></div></div> <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center; margin-bottom: 24px;"> <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 224px;"></div> <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 144px;"></div></div></a><p style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;"><a href="https://www.instagram.com/p/CIbJDXNgq6K/?utm_source=ig_embed&amp;utm_campaign=loading" style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;" target="_blank">A post shared by கViN📷💜🧖 (@kavinograph)</a></p></div></blockquote> <script async src="http://www.instagram.com/embed.js"></script>    
+                    </div>
+                    <h2 class="mt-4">Instagram</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Projects -->
+<section id="projects" class="container-fluid py-4 bg-dark">
+    <h1 class="text-center t-title mb-3">Projects</h1>
+    <div class="container w-md-50">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+            <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+            <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+            <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://kavinograph.files.wordpress.com/2020/11/web-raptor.jpg" class="d-block img-fluid" alt="...">
+                <div class="carousel-caption block pb-0">
+                <h5>RAPTOR RUN</h5>
+                <p>Raptor run was an attempt to more accurately animate a velociraptor running with the in built tools available within Blender 2.83</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://kavinograph.files.wordpress.com/2020/11/tank-web.jpg" class="d-block img-fluid" alt="...">
+                <div class="carousel-caption block pb-0">
+                <h5>BLITZ 1942</h5>
+                <p>Blitz 1942 is an animated short film made in 20 days in Blender 2.83. and is loosely based on WW2 </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://kavinograph.files.wordpress.com/2020/11/spectre-web.jpg" class="d-block img-fluid" alt="...">
+                <div class="carousel-caption block pb-0">
+                <h5>ROME.</h5>
+                <p>Rome. is an animated car chase sequence made for the Andrey lebrov Automotive challenge . animated in Blender</p>
+                </div>
+            </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </a>
+        </div>
+    </div>
+</section>
+<!-- Contact Me -->
+<section id="contactme" class="container-fluid py-5 bg-dark text-center">
+    <h1>Want to work with me?</h1>
+    <h3>Reach out to me in the following spaces!</h3>
+    <div class=" mt-5 container d-flex justify-content-evenly w-md-50">
+        <a href="" aria-label="instagram">
+            <i class="im im-instagram"></i>    
+        </a>
+        <a href="" aria-label="facebook">
+            <i class="im im-facebook"></i>
+        </a>
+        <a href="" aria-label="email">
+            <i class="im im-mail"></i>
+        </a>
+    </div>
+</section>
