--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -1,6 +1,9 @@
+:host
+    color: white
+    
 #header
     background-image: url('/assets/about.jpg')
-    background-attachment: scroll
+    background-attachment: local
     background-size: cover
     background-repeat: no-repeat
     background-position-y: top
@@ -20,3 +23,50 @@
         background: rgb(255,255,255,.25)
         backdrop-filter: blur(5px)
         box-shadow: 5px 5px 5px rgb(0,0,0,.15)
+        color: black
+
+#mywork
+    color: white
+    flex-direction: column
+    >div
+        flex-grow: 1
+
+    .work-card
+        position: relative
+        text-align: center
+        >img
+            border-radius: 10%
+            transition: all 0.5s ease-in-out
+            &:hover
+                filter: blur(5px)
+
+    .work-card-text
+        text-decoration: none
+        color: white
+        font-weight: 700
+        text-transform: uppercase
+        text-shadow: 1px 1px 5px rgb(0,0,0,.75)
+        position: absolute
+        left: 50%
+        top: 50%
+        transform: translate(-50%, -50%)
+        &:hover
+            text-decoration: underline
+    hr
+        height: 3px
+        opacity: 0.5
+
+#projects
+    .carousel-caption
+        background-color: rgb(0,0,0,.25)
+
+#contactme
+    a
+        color: white
+        text-decoration: none
+        >.im
+            font-size: xxx-large
+
+@media screen and ( min-width: 768px )
+    .w-md-50
+        width: 50%
