--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,26 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="">KAVINOGRAPH</a>
+      <a class="navbar-brand" href="/">KAVINOGRAPH</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-center align-items-center">
-          <li class="nav-item mx-2">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <li class="nav-item mx-2"><a class="nav-link active" aria-current="page" href="/#header">Home</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              My Work
+            </a>
+            <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+              <li class="nav-item mx-2"><a href="#" class="nav-link">3D Work</a></li>
+              <li class="nav-item mx-2"><a href="#" class="nav-link">Graphic Design</a></li>
+              <li class="nav-item mx-2"><a href="#" class="nav-link">Sketches</a></li>
+              <li class="nav-item mx-2"><a href="#" class="nav-link">Photographs</a></li>
+            </ul>
           </li>
-          <li class="nav-item mx-2">
-              <a href="#" class="nav-link">3D Work</a>
-          </li>
-          <li class="nav-item mx-2">
-              <a href="#" class="nav-link">Graphic Design</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a href="#" class="nav-link">Sketches</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a href="#" class="nav-link">Photographs</a>
-        </li>
+          <li class="nav-item mx-2"><a href="" class="nav-link">About Me</a></li>
+          <li class="nav-item mx-2"><a href="/#contactme" class="nav-link">Contact Me</a></li>
         </ul>
       </div>
     </div>
