--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,4 +3,12 @@ body
     font-family: 'Poppins', 'Segoe UI'
 
 .full-body
-    height: calc(100vh - 56px)
+    min-height: calc(100vh - 56px)
+
+.bg-dark
+    background-color: black !important
+
+.t-title
+    text-decoration: underline
+    text-transform: uppercase
+    font-weight: 600
