docs build update

--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -2,7 +2,7 @@
     color: white
     
 #header
-    background-image: url('/assets/about.jpg')
+    background-image: url('/assests/about.jpg')
     background-attachment: local
     background-size: cover
     background-repeat: no-repeat
