--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
             </ul>
           </li>
           <li class="nav-item mx-2"><a href="" class="nav-link">About Me</a></li>
-          <li class="nav-item mx-2"><a href="/#contactme" class="nav-link">Contact Me</a></li>
+          <li class="nav-item mx-2"><a href="#contactme" class="nav-link">Contact Me</a></li>
         </ul>
       </div>
     </div>
