--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<section id="header" class="d-flex container-fluid d-flex full-body bg-dark">
+<section id="header" class="d-flex container-fluid d-flex full-body bg-dark" style="background-image: url('assets/about.jpg')">
     <div class="container d-flex">
         <div class="row">
             <div class="col-12 col-md-6 h-md-auto"></div>
