--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -1,6 +1,6 @@
 :host
     color: white
-    
+
 #header
     background-attachment: local
     background-size: cover
@@ -23,6 +23,9 @@
         backdrop-filter: blur(5px)
         box-shadow: 5px 5px 5px rgb(0,0,0,.15)
         color: black
+    hr
+        height: 3px
+        opacity: 0.5
 
 #mywork
     color: white
@@ -51,9 +54,6 @@
         transform: translate(-50%, -50%)
         &:hover
             text-decoration: underline
-    hr
-        height: 3px
-        opacity: 0.5
 
 #projects
     .carousel-caption
@@ -68,4 +68,8 @@
 
 @media screen and ( min-width: 768px )
     .w-md-50
+        width: 50%
+
+@media screen and ( min-width: 992px )
+    .w-lg-50
         width: 50%
