--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,19 +6,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-center align-items-center">
-          <li class="nav-item mx-2"><a class="nav-link" aria-current="page" href="#" routerLink="/" routerLinkActive="active" routerLinkActiveOptions="{exact: true}">Home</a></li>
+          <li class="nav-item mx-2"><a class="nav-link" aria-current="page" href="#" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               My Work
             </a>
             <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-              <li class="nav-item mx-2"><a href="#" routerLink="/mywork/3dwork" routerLinkActive="active" routerLinkActiveOptions="{exact: true}" class="nav-link">3D Work</a></li>
-              <li class="nav-item mx-2"><a href="#" routerLink="/mywork/graphicdesign" routerLinkActive="active" routerLinkActiveOptions="{exact: true}" class="nav-link">Graphic Design</a></li>
-              <li class="nav-item mx-2"><a href="#" routerLink="/mywork/sketches" routerLinkActive="active" routerLinkActiveOptions="{exact: true}" class="nav-link">Sketches</a></li>
-              <li class="nav-item mx-2"><a href="#" routerLink="/mywork/photographs" routerLinkActive="active" routerLinkActiveOptions="{exact: true}" class="nav-link">Photographs</a></li>
+              <li class="nav-item mx-2"><a href="#" routerLink="/mywork/3dwork" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">3D Work</a></li>
+              <li class="nav-item mx-2"><a href="#" routerLink="/mywork/graphicdesign" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Graphic Design</a></li>
+              <li class="nav-item mx-2"><a href="#" routerLink="/mywork/sketches" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Sketches</a></li>
+              <li class="nav-item mx-2"><a href="#" routerLink="/mywork/photographs" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Photographs</a></li>
             </ul>
           </li>
-          <li class="nav-item mx-2"><a href="#" routerLink="/aboutme" routerLinkActive="active" routerLinkActiveOptions="{exact: true}" class="nav-link">About Me</a></li>
+          <li class="nav-item mx-2"><a href="#" routerLink="/aboutme" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">About Me</a></li>
           <li class="nav-item mx-2"><a href="#contactme" routerLink="/" fragment="contactme" class="nav-link">Contact Me</a></li>
         </ul>
       </div>
