updated projects carousel

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,6 @@
 </section>
 <!-- Works -->
 <section id="mywork" class="d-flex container-fluid full-body bg-dark pt-5">
-    <h1 class="text-center t-title">My Work</h1>
     <div class="d-flex justify-content-center container p-4">
         <div class="row">
             <div class="d-flex col-12 col-md-6 p-4">
@@ -57,7 +56,7 @@
             <div class="d-flex flex-column justify-content-center col-12 col-md-6 p-2 text-center">
                 <div class="img-thumbnail">
                     <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube-nocookie.com/embed/vVVI6LHbytk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/Yem9pA-lY5E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <h2 class="mt-4">Youtube</h2>
@@ -75,32 +74,36 @@
 <section id="projects" class="container-fluid py-4 bg-dark">
     <h1 class="text-center t-title mb-3">Projects</h1>
     <div class="container w-lg-50">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <ol class="carousel-indicators">
-            <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
-            <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-            <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-            </ol>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-interval="false" data-bs-touch="true" data-bs-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://kavinograph.files.wordpress.com/2020/11/web-raptor.jpg" class="d-block img-fluid" alt="...">
-                <div class="carousel-caption block pb-0">
-                <h5>RAPTOR RUN</h5>
-                <p>Raptor run was an attempt to more accurately animate a velociraptor running with the in built tools available within Blender 2.83</p>
+                <div class="card h-100" style="color:black">
+                    <img src="https://kavinograph.files.wordpress.com/2020/11/web-raptor.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">RAPTOR RUN</h5>
+                        <p class="card-text">Raptor run was an attempt to more accurately animate a velociraptor running with the in built tools available within Blender 2.83</p>        
+                        <a href="https://youtu.be/WKJt2YVPgB4" class="btn btn-danger" target="_blank"> <i class="im im-youtube"></i> Watch Now</a>
+                    </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://kavinograph.files.wordpress.com/2020/11/tank-web.jpg" class="d-block img-fluid" alt="...">
-                <div class="carousel-caption block pb-0">
-                <h5>BLITZ 1942</h5>
-                <p>Blitz 1942 is an animated short film made in 20 days in Blender 2.83. and is loosely based on WW2 </p>
+                <div class="card h-100" style="color:black">
+                    <img src="https://kavinograph.files.wordpress.com/2020/11/tank-web.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">BLITZ 1942</h5>
+                        <p class="card-text">Blitz 1942 is an animated short film made in 20 days in Blender 2.83. and is loosely based on WW2 </p>        
+                        <a href="https://youtu.be/E47Us58D6wY" class="btn btn-danger" target="_blank"> <i class="im im-youtube"></i> Watch Now</a>
+                    </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://kavinograph.files.wordpress.com/2020/11/spectre-web.jpg" class="d-block img-fluid" alt="...">
-                <div class="carousel-caption block pb-0">
-                <h5>ROME.</h5>
-                <p>Rome. is an animated car chase sequence made for the Andrey lebrov Automotive challenge . animated in Blender</p>
+                <div class="card h-100" style="color:black">
+                    <img src="https://kavinograph.files.wordpress.com/2020/11/spectre-web.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">ROME.</h5>
+                        <p class="card-text">Rome. is an animated car chase sequence made for the Andrey lebrov Automotive challenge . animated in Blender</p>        
+                        <a href="https://youtu.be/vVVI6LHbytk" class="btn btn-danger" target="_blank"> <i class="im im-youtube"></i> Watch Now</a>
+                    </div>
                 </div>
             </div>
             </div>
