--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,25 +28,25 @@
             <div class="d-flex col-12 col-md-6 p-4">
                 <div class="work-card">
                     <img src="assets/countach1-01.jpg" class="img-fluid ratio ratio-1x1" alt="3D Renders">
-                    <a href="" class="fs-2 work-card-text text-center">3D Renders</a>
+                    <a href="/mywork/3dwork" routerLink="/mywork/3dwork" class="fs-2 work-card-text text-center">3D Renders</a>
                 </div>
             </div>
             <div class="d-flex p-4 col-12 col-md-6">
                 <div class="work-card">
                     <img src="assets/countach1-03.jpg" class="img-fluid ratio ratio-1x1" alt="Graphic Design">
-                    <a href="" class="fs-2 work-card-text text-center">Graphic Design</a>
+                    <a href="/mywork/graphicdesign" routerLink="/mywork/graphicdesign" class="fs-2 work-card-text text-center">Graphic Design</a>
                 </div>
             </div>
             <div class="d-flex p-4 col-12 col-md-6">
                 <div class="work-card">
                     <img src="assets/countach1-02.jpg" class="img-fluid ratio ratio-1x1" alt="Sketches">
-                    <a href="" class="fs-2 work-card-text text-center">Sketches</a>
+                    <a href="/mywork/sketches" routerLink="/mywork/sketches" class="fs-2 work-card-text text-center">Sketches</a>
                 </div>
             </div>
             <div class="d-flex p-4 col-12 col-md-6">
                 <div class="work-card">
                     <img src="assets/countach1-04.jpg" class="img-fluid ratio ratio-1x1" alt="Photographs">
-                    <a href="" class="fs-2 work-card-text text-center">Photographs</a>
+                    <a href="/mywork/photographs" routerLink="/mywork/photographs" class="fs-2 work-card-text text-center">Photographs</a>
                 </div>
             </div>
         </div>
