border-radius change in work & img grid

--- a/src/app/img-grid/img-grid.component.html
+++ b/src/app/img-grid/img-grid.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div *ngFor="let element of printObject;" class="col-md-4 col-12 p-2">
             <div *ngFor="let img of element" class="py-2">
-                <img src ="{{img}}" class="img-fluid img-thumbnail">
+                <img src ="{{img}}" class="img-fluid">
             </div>
         </div>
     </div>
