--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -40,7 +40,7 @@
         position: relative
         text-align: center
         >img
-            border-radius: 10%
+            border-radius: 20px
             transition: all 0.5s ease-in-out
             &:hover
                 filter: blur(5px)
