initial insta grid

--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -4,6 +4,17 @@
 .im
     vertical-align: bottom
 
+.insta-grid
+    height: 100vw
+
+@media all and ( max-width: 1040px )
+    .insta-grid
+        height: calc( 100vw / 3 )
+
+@media all and ( max-width: 816px )
+    .insta-grid
+        height: calc( 100vw / 2 )
+
 #header
     background-attachment: local
     background-size: cover
