project carousel navigation tweak

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -84,7 +84,7 @@
             <div class="carousel-item active">
                 <div class="card h-100" style="color:black">
                     <img src="https://kavinograph.files.wordpress.com/2020/11/web-raptor.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">RAPTOR RUN</h5>
                         <p class="card-text">Raptor run was an attempt to more accurately animate a velociraptor running with the in built tools available within Blender 2.83</p>        
                         <a href="https://youtu.be/WKJt2YVPgB4" class="btn btn-danger" target="_blank"> <i class="im im-youtube"></i> Watch Now</a>
@@ -94,7 +94,7 @@
             <div class="carousel-item">
                 <div class="card h-100" style="color:black">
                     <img src="https://kavinograph.files.wordpress.com/2020/11/tank-web.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">BLITZ 1942</h5>
                         <p class="card-text">Blitz 1942 is an animated short film made in 20 days in Blender 2.83. and is loosely based on WW2 </p>        
                         <a href="https://youtu.be/E47Us58D6wY" class="btn btn-danger" target="_blank"> <i class="im im-youtube"></i> Watch Now</a>
@@ -104,7 +104,7 @@
             <div class="carousel-item">
                 <div class="card h-100" style="color:black">
                     <img src="https://kavinograph.files.wordpress.com/2020/11/spectre-web.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">ROME.</h5>
                         <p class="card-text">Rome. is an animated car chase sequence made for the Andrey lebrov Automotive challenge . animated in Blender</p>        
                         <a href="https://youtu.be/vVVI6LHbytk" class="btn btn-danger" target="_blank"> <i class="im im-youtube"></i> Watch Now</a>
@@ -112,12 +112,12 @@
                 </div>
             </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <a style="opacity: 1;" class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
+                <span class="bg-dark rounded-circle p-2" aria-hidden="true"><i class="im im-angle-left"></i></span>
             <span class="visually-hidden">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <a style="opacity: 1;" class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
+            <span class="bg-dark rounded-circle p-2" aria-hidden="true"><i class="im im-angle-right"></i></span>
             <span class="visually-hidden">Next</span>
             </a>
         </div>
