--- a/src/app/navbar/navbar.component.sass
+++ b/src/app/navbar/navbar.component.sass
@@ -12,7 +12,7 @@
         border-bottom: 2px solid white
 
     &.active
-        border-top: 2px solid white
+        border-top: 2px solid red
         width: max-content
         &:hover
             border-bottom: 2px solid white
