init footer and auto collapse nav added

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<footer class="bg-dark text-center">
+    <p class="m-0 py-2">© KAVINOGRAPH.<br>Designed with<i class="im im-heart px-2" aria-label="heart"></i>by <a href="https://adhitya-raj.github.io/">Adhitya Raj</a></p>
+</footer>
