--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div style="margin-top: 56px;">
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
