--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-navbar></app-navbar>
-<div style="margin-top: 56px;">
-    <router-outlet></router-outlet>
-</div>
-<app-footer></app-footer>
+<main>
+    <app-navbar></app-navbar>
+    <div style="margin-top: 56px;" class="bg-dark">
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
+</main>
