--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="bg-dark text-center">
-    <p class="m-0 py-2">© KAVINOGRAPH.<br>Designed with<i class="im im-heart px-2" aria-label="heart"></i>by <a href="https://adhitya-raj.github.io/">Adhitya Raj</a></p>
+    <p class="m-0 py-2"><a href="/aboutme" routerLink="aboutme">© KAVINOGRAPH.</a><br>Designed with<i class="im im-heart px-2" aria-label="heart"></i>by <a href="https://adhitya-raj.github.io/">Adhitya Raj</a></p>
 </footer>
