--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -2,7 +2,37 @@
     color: white
 
 .im
-    vertical-align: bottom
+    vertical-align: inherit
+
+@keyframes scrollcue
+        0%
+            transform: translate(-50%, -10%)
+        100%
+            transform: translate(-50%, 10%)
+
+@keyframes words
+    0%
+        content: "3D Render Artist"
+    33.33%
+        content: "Graphic Designer"
+    66.67%
+        content: "Artist"
+    100%
+        content: "Photographer"
+
+
+.scroll-cue
+    position: absolute
+    bottom: 50px
+    left: 50%
+    color: rgb(0,0,0,0.75)
+    padding: 10px
+    border-radius: 20px
+    animation: scrollcue 1s
+    animation-iteration-count: infinite
+    text-transform: uppercase
+    font-weight: 600
+            
 
 .insta-grid
     height: 100vw
@@ -15,28 +45,52 @@
     .insta-grid
         height: calc( 100vw / 2 )
 
-#header
-    background-attachment: local
-    background-size: cover
-    background-repeat: no-repeat
-    background-position-y: top
-
 .hm-100
     min-height: 100%
 
 #header
-    .card-title
-        font-weight: 600
+    background-attachment: local
+    background-size: contain
+    background-repeat: no-repeat
+    background-position-y: top
 
-    .card-text
-        font-weight: 400
+    .card-title
+        font-weight: 700
+        font-size: 10vw
+        width: max-content
+    
+    .card-subtitle
+        color: #ff3434
+        text-transform: uppercase
+        font-weight: bold
+        font-size: 5vw
+        font-family: "Segoe UI"
+        &::before
+            content: "3D Render Artist"
+            animation: words 8s infinite
+            animation-delay: 2s
+            animation-timing-function: ease-in-out
 
     .card
         border-radius: 20px
-        background: rgb(255,255,255,.25)
+        background: rgb(0,0,0,.75)
         backdrop-filter: blur(5px)
         box-shadow: 5px 5px 5px rgb(0,0,0,.15)
+        color: whitesmoke
+        width: max-content
+
+    .card-btn-pri
+        color: whitesmoke
+        border: 1px solid whitesmoke
+        border-radius: 20px
+
+    .card-btn-sec
         color: black
+        background-color: #ff3434
+        border-radius: 20px
+        font-weight: 400
+
+
     hr
         height: 3px
         opacity: 0.5
@@ -83,6 +137,8 @@
 @media screen and ( min-width: 768px )
     .w-md-50
         width: 50%
+    .md-full-body
+        height: calc( 100vh - 56px )
 
 @media screen and ( min-width: 992px )
     .w-lg-50
