--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -66,10 +66,10 @@
         font-size: 5vw
         font-family: "Segoe UI"
         &::before
-            content: "3D Render Artist"
+            content: ""
             animation: words 8s infinite
             animation-delay: 2s
-            animation-timing-function: ease-in-out
+            animation-timing-function: linear
 
     .card
         border-radius: 20px
