--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <main>
     <app-navbar></app-navbar>
+    <app-social-nav></app-social-nav>
     <div style="margin-top: 56px;" class="bg-dark">
         <router-outlet></router-outlet>
     </div>
