homepage v1.2, bug fixes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <!-- Header -->
-<section id="header" class="d-flex container-fluid md-full-body bg-dark">
+<section id="header" class="d-flex container-fluid full-body bg-dark" style="background-image: url('assets/home_bg.jpg');">
     <div class="container-fluid d-flex align-items-center">
         <div class="card ms-auto">
-            <div class="card-body p-2">
-                <h1 class="card-title">KAVINOGRAPH<span style="color: red;">.</span></h1>
-                <h2 class="card-subtitle mb-md-5"></h2>
-                <span class="d-none d-md-inline">
-                    <a href="/#mywork" class="btn card-btn-pri">Swipe Down <i class="im im-angle-down" style="color: red;"></i></a>
-                    <a href="/aboutme" routerLink="aboutme" class="btn card-btn-sec ms-2">About Me</a>
+            <div class="card-body px-2 py-4">
+                <h1 class="card-title display-2">KAVINOGRAPH<span style="color: red;">.</span></h1>
+                <h2 class="card-subtitle mb-5 display-6"></h2>
+                <span class="d-md-inline">
+                    <a href="/#mywork" class="card-btn-pri btn">Swipe Down <i class="im im-angle-down" style="color: red;"></i></a>
+                    <a href="/aboutme" routerLink="aboutme" class="card-btn-sec btn ms-2">About Me</a>
                 </span>
             </div>
         </div>
@@ -49,7 +49,7 @@
                 <h2 class="mb-4">Youtube</h2>
                 <div class="img-thumbnail">
                     <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/Yem9pA-lY5E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/7CvfQtn-NA8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
