insta feed widget changed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,9 +57,8 @@
     </div>
     <div class="mt-4 container-fluid">
         <h2 class=" mb-4 text-center">Instagram</h2>
-        <!-- LightWidget WIDGET -->
-        <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-        <iframe src="//lightwidget.com/widgets/931c6220700d55c9a5bd54bcba26ab8d.html" scrolling="no" allowtransparency="true" class="lightwidget-widget insta-grid" style="width:100%;border:0;overflow:hidden;"></iframe>
+        
+        <div class="elfsight-app-c146a3cf-398b-41b6-8053-f2baa3b69704"></div>    
     </div>
 </section>
 <!-- Projects -->
