updated about page

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -14,27 +14,53 @@
             </div>
         </div>
     </div>
-    <div class="row mt-md-5 pt-md-5">
-        <div class="col-12 col-md-6 text-center">
-            <h3>Skills</h3>
-            <ul>
-                <li>3D Modelling</li>
-                <li>3D Animation</li>
-                <li>Photography</li>
-                <li>Digital/ Traditional Artist</li>
-            </ul>
+    <div class="row mx-auto mt-md-5 pt-md-5 container text-center">
+        <h3 class="fs-1 mb-3"><strong>Skills</strong></h3>
+        <div class="content-grid-2 mb-5">
+            <div class="content-item">
+                <img src="assets/aboutme/3d-modelling.png" alt="3D Modelling Icon">
+                <p class="content-head">3D Modelling</p>
+            </div>
+            <div class="content-item">
+                <img src="assets/aboutme/3d-rendering.png" alt="3D Animation Icon">
+                <p class="content-head">3D Animation</p>
+            </div>
+            <div class="content-item">
+                <img src="assets/aboutme/photography.png" alt="Photography Icon">
+                <p class="content-head">Photography</p>
+            </div>
+            <div class="content-item">
+                <img src="assets/aboutme/art.png" alt="Digital / Traditional Art Icon">
+                <p class="content-head">Digital / Traditional Art</p>
+            </div>
         </div>
-        <div class="col-12 col-md-6 text-center">
-            <h3>Softwares proficient with</h3>
-            <ul>
-                <li>Blender</li>
-                <li>Houdini</li>
-                <li>Adobe Photoshop</li>
-                <li>Autodesk 3ds Max</li>
-                <li>Adobe After Effects</li>
-                <li>Adobe Premiere Pro</li>
-            </ul>
+        <h3 class="fs-1 mb-3"><strong>Tools</strong></h3>
+        <div class="content-grid-3">
+            <div class="content-item">
+                <img src="assets/aboutme/blender-3d.png" alt="Blender Icon">
+                <p class="content-head">Blender</p>
+            </div>
+            <div class="content-item">
+                <img src="assets/aboutme/houdini.png" alt="Houdini Icon">
+                <p class="content-head">Houdini</p>
+            </div>
+            <div class="content-item">
+                <img src="assets/aboutme/adobe-photoshop.png" alt="Adobe Photoshop Icon">
+                <p class="content-head">Adobe Photoshop</p>
+            </div>
+            <div class="content-item">
+                <img src="assets/aboutme/3ds-max.png" alt="Autodesk 3ds Max Icon">
+                <p class="content-head">Autodesk 3ds Max</p>
+            </div>
+            <div class="content-item">
+                <img src="assets/aboutme/adobe-after-effects.png" alt="Adobe After Effects Icon">
+                <p class="content-head">Adobe After Effects</p>
+            </div>
+            <div class="content-item">
+                <img src="assets/aboutme/adobe-premiere-pro.png" alt="Adobe Premiere Pro Icon">
+                <p class="content-head">Adobe Premiere Pro</p>
+            </div>
         </div>
+        <p class="text-end">Icons from <a href="http://icons8.com" target="_blank" rel="noopener noreferrer">icons8.com</a></p>
     </div>
-    <div class="row"></div>
 </div>
