--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -69,7 +69,7 @@
             <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="card h-100" style="color:black">
-                    <img src="https://kavinograph.files.wordpress.com/2020/11/web-raptor.jpg" class="card-img-top" alt="...">
+                    <img src="assets/projects/web-raptor.jpg" class="card-img-top">
                     <div class="card-body text-center">
                         <h5 class="card-title">RAPTOR RUN</h5>
                         <p class="card-text">Raptor run was an attempt to more accurately animate a velociraptor running with the in built tools available within Blender 2.83</p>        
@@ -79,7 +79,7 @@
             </div>
             <div class="carousel-item">
                 <div class="card h-100" style="color:black">
-                    <img src="https://kavinograph.files.wordpress.com/2020/11/tank-web.jpg" class="card-img-top" alt="...">
+                    <img src="assets/projects/tank-web.jpg" class="card-img-top">
                     <div class="card-body text-center">
                         <h5 class="card-title">BLITZ 1942</h5>
                         <p class="card-text">Blitz 1942 is an animated short film made in 20 days in Blender 2.83. and is loosely based on WW2 </p>        
@@ -89,7 +89,7 @@
             </div>
             <div class="carousel-item">
                 <div class="card h-100" style="color:black">
-                    <img src="https://kavinograph.files.wordpress.com/2020/11/spectre-web.jpg" class="card-img-top" alt="...">
+                    <img src="assets/projects/spectre-web.jpg" class="card-img-top">
                     <div class="card-body text-center">
                         <h5 class="card-title">ROME.</h5>
                         <p class="card-text">Rome. is an animated car chase sequence made for the Andrey lebrov Automotive challenge . animated in Blender</p>        
