--- a/src/app/aboutme/aboutme.component.sass
+++ b/src/app/aboutme/aboutme.component.sass
@@ -11,6 +11,31 @@
     p
         font-family: "Segoe UI"
 
+.content-grid-2
+    display: grid
+    grid-template-columns: repeat( auto-fill, 50% )
+
+.content-grid-3
+    display: grid
+    grid-template-columns: repeat( auto-fill, 50% )
+
+.content-item
+    display: flex
+    flex-direction: column
+    align-items: center
+    padding: 20px
+
+    img
+        margin: 0 0 10px 0
+        height: 72px
+        width: fit-content
+
+.content-head
+    font-size: 1.5rem
+
+a
+    color: white
+
 @media screen and ( min-width: 768px )
     .about-card
         transform: translate(-10%, 40px)
@@ -19,3 +44,7 @@
     
     .img-fluid
         transform: translateX( 10%)
+    
+    .content-grid-3
+        display: grid
+        grid-template-columns: repeat( auto-fill, 33% )
