--- a/src/app/social-nav/social-nav.component.html
+++ b/src/app/social-nav/social-nav.component.html
@@ -1,5 +1,5 @@
 <div class="social">
-    <a href="#" aria-label="Pinterest link" target="_blank"><i class="im im-pinterest"></i></a>
-    <a href="https://www.instagram.com/kavinograph/" aria-label="Instagram link" target="_blank"><i class="im im-instagram"></i></a>
-    <a href="https://www.youtube.com/c/KavinArulnambi" aria-label="Youtube link" target="_blank"><i class="im im-youtube"></i></a>
+    <a href="#" aria-label="Pinterest link" target="_blank" rel="noopener noreferrer"><i class="im im-pinterest"></i></a>
+    <a href="https://www.instagram.com/kavinograph/" aria-label="Instagram link" target="_blank" rel="noopener noreferrer"><i class="im im-instagram"></i></a>
+    <a href="https://www.youtube.com/c/KavinArulnambi" aria-label="Youtube link" target="_blank" rel="noopener noreferrer"><i class="im im-youtube"></i></a>
 </div>
