--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
                 <h1 class="card-title display-2">KAVINOGRAPH<span style="color: red;">.</span></h1>
                 <h2 class="card-subtitle mb-5 display-6"></h2>
                 <span class="d-md-inline">
-                    <a href="/#mywork" class="card-btn-pri btn">Swipe Down <i class="im im-angle-down" style="color: red;"></i></a>
+                    <a href="/#mywork" routerLink="/" fragment="mywork" class="card-btn-pri btn">Swipe Down <i class="im im-angle-down" style="color: red;"></i></a>
                     <a href="/aboutme" routerLink="aboutme" class="card-btn-sec btn ms-2">About Me</a>
                 </span>
             </div>
