animations added partially

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,28 +14,28 @@
     </div>
 </section>
 <!-- Works -->
-<section id="mywork" class="d-flex container-fluid full-body bg-dark pt-md-5">
+<section id="mywork" class="d-flex container-fluid full-body bg-dark pt-md-5" data-aos="fade-up">
     <div class="d-flex justify-content-center container p-4">
         <div class="row">
-            <div class="d-flex col-12 col-md-6 p-4">
+            <div class="d-flex col-12 col-md-6 p-4" data-aos="fade-up">
                 <div class="work-card">
                     <img src="assets/countach1-01.jpg" class="img-fluid ratio ratio-1x1" alt="3D Renders">
                     <a href="/mywork/3dwork" routerLink="/mywork/3dwork" class="fs-2 work-card-text text-center">3D Renders</a>
                 </div>
             </div>
-            <div class="d-flex p-4 col-12 col-md-6">
+            <div class="d-flex p-4 col-12 col-md-6" data-aos="fade-up">
                 <div class="work-card">
                     <img src="assets/countach1-03.jpg" class="img-fluid ratio ratio-1x1" alt="Graphic Design">
                     <a href="/mywork/graphicdesign" routerLink="/mywork/graphicdesign" class="fs-2 work-card-text text-center">Graphic Design</a>
                 </div>
             </div>
-            <div class="d-flex p-4 col-12 col-md-6">
+            <div class="d-flex p-4 col-12 col-md-6" data-aos="fade-up">
                 <div class="work-card">
                     <img src="assets/countach1-02.jpg" class="img-fluid ratio ratio-1x1" alt="Sketches">
                     <a href="/mywork/sketches" routerLink="/mywork/sketches" class="fs-2 work-card-text text-center">Sketches</a>
                 </div>
             </div>
-            <div class="d-flex p-4 col-12 col-md-6">
+            <div class="d-flex p-4 col-12 col-md-6" data-aos="fade-up">
                 <div class="work-card">
                     <img src="assets/countach1-04.jpg" class="img-fluid ratio ratio-1x1" alt="Photographs">
                     <a href="/mywork/photographs" routerLink="/mywork/photographs" class="fs-2 work-card-text text-center">Photographs</a>
@@ -45,7 +45,7 @@
     </div>
     <div class="container d-flex-row justify-content-center">
         <div class="row justify-content-center">
-            <div class="d-flex flex-column justify-content-center col-12 p-2 text-center">
+            <div class="d-flex flex-column justify-content-center col-12 p-2 text-center" data-aos="fade-up">
                 <h2 class="mb-4">Youtube</h2>
                 <div class="img-thumbnail">
                     <div class="ratio ratio-16x9">
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <div class="mt-4 container-fluid">
+    <div class="mt-4 container-fluid" data-aos="fade-up">
         <h2 class=" mb-4 text-center">Instagram</h2>
         
         <div class="elfsight-app-c146a3cf-398b-41b6-8053-f2baa3b69704"></div>    
@@ -63,8 +63,8 @@
 </section>
 <!-- Projects -->
 <section id="projects" class="container-fluid py-4 bg-dark">
-    <h1 class="text-center t-title mb-3">Projects</h1>
-    <div class="container w-lg-50">
+    <h1 class="text-center t-title mb-3" data-aos="fade-up">Projects</h1>
+    <div class="container w-lg-50" data-aos="fade-up">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-interval="3000" data-bs-touch="true" data-bs-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active">
@@ -110,7 +110,7 @@
     </div>
 </section>
 <!-- Contact Me -->
-<section id="contactme" class="container-fluid py-5 bg-dark text-center">
+<section id="contactme" class="container-fluid py-5 bg-dark text-center" data-aos="flip-up">
     <h1>Want to work with me?</h1>
     <h3>Reach out to me in the following spaces!</h3>
     <div class=" mt-5 container d-flex justify-content-evenly w-md-50">
