--- a/src/styles.sass
+++ b/src/styles.sass
@@ -4,7 +4,8 @@ html,body
     
 body
     font-family: 'Poppins', 'Segoe UI'
-
+    overflow-x: hidden
+    
 .full-body
     min-height: calc(100vh - 56px)
 
